Fix thread body z-index

--- a/packages/boxel/addon/components/boxel/thread/index.css
+++ b/packages/boxel/addon/components/boxel/thread/index.css
@@ -19,6 +19,7 @@
 .boxel-thread__scroll-wrapper {
   padding-bottom: var(--boxel-sp-lg);
   overflow-y: auto;
+  z-index: 0;
 }
 
 .boxel-thread__scroll-wrapper:focus {
